fixed more layout problems

--- a/css/main.css
+++ b/css/main.css
@@ -121,10 +121,14 @@
   height: 100vh;
   padding-top: .5rem;
   background-color: gray; }
-  .section__portfolio-header {
-    padding-bottom: 8rem; }
   .section__portfolio-cont {
-    margin: auto;
+    padding-top: 8rem;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly; }
+  .section__portfolio-items {
+    width: 10rem;
+    height: 10rem;
     border: 4px solid #3f4144;
     border-radius: 50%;
     background: rgba(52, 62, 79, 0.3);
