--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -3,22 +3,28 @@
 	padding-top: .5rem;
 	background-color: gray;
 
-	&-header {
-		padding-bottom: 8rem;
+	&-cont {
+		padding-top: 8rem;
+		display: flex;
+		justify-content: center;
+		justify-content: space-evenly;
+
+		
 
 	}
 
 	
-	&-cont {
-		margin: auto;
-		// width: 5%;
+	&-items {
+		width: 10rem;
+		height: 10rem;
+
 		border: 4px solid $color-gray-secondary;
 		border-radius: 50%;
-        // position: relative;
-        background: rgba($color-gray-primary, 0.3);
+	
+		background: rgba($color-gray-primary, 0.3);
 
-        color: white;
-        font-size: 2rem;
+		color: white;
+		font-size: 2rem;
 
 	}
 
